--- a/Loyalty/config/loyalty/LoyaltyTransactionFormHandler.properties
+++ b/Loyalty/config/loyalty/LoyaltyTransactionFormHandler.properties
@@ -1,6 +1,6 @@
 # /loyalty/LoyaltyTransactionFormHandler
 #Fri Sep 08 14:38:46 MSK 2017
-$class=atg.repository.servlet.RepositoryFormHandler
+$class=loyalty.LoyaltyTransactionFormHandler
 $scope=request
 clearValueOnSet=false
 itemDescriptorName=loyaltyTransaction
