--- a/Loyalty/config/loyalty/LoyaltyTransactionFormHandler.properties
+++ b/Loyalty/config/loyalty/LoyaltyTransactionFormHandler.properties
@@ -6,3 +6,4 @@ clearValueOnSet=false
 itemDescriptorName=loyaltyTransaction
 repository=/loyalty/LoyaltyRepository
 requireIdOnCreate=false
+loyaltyManager=/loyalty/LoyaltyManager
