--- a/DynamusicB2C/.classpath
+++ b/DynamusicB2C/.classpath
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="classes"/>
-	<classpathentry kind="lib" path="C:/ATG/ATG2006.3/DCS/lib/resources.jar"/>
-	<classpathentry kind="lib" path="C:/ATG/ATG2006.3/DCS/lib/classes.jar"/>
-	<classpathentry kind="lib" path="C:/ATG/ATG2006.3/DSS/lib/resources.jar"/>
-	<classpathentry kind="lib" path="C:/ATG/ATG2006.3/DSS/lib/classes.jar"/>
-	<classpathentry kind="lib" path="C:/ATG/ATG2006.3/DPS/lib/resources.jar"/>
-	<classpathentry kind="lib" path="C:/ATG/ATG2006.3/DPS/lib/classes.jar"/>
-	<classpathentry kind="lib" path="C:/ATG/ATG2006.3/DAS/lib/resources.jar"/>
-	<classpathentry kind="lib" path="C:/ATG/ATG2006.3/DAS/lib/classes.jar"/>
-	<classpathentry kind="lib" path="C:/ATG/ATG2006.3/DAS/lib/servlet.jar"/>
-	<classpathentry kind="lib" path="C:/ATG/ATG2006.3/DAS/lib/ice.jar"/>
-	<classpathentry kind="lib" path="C:/ATG/ATG2006.3/DAS/solid/SolidDriver2.1.jar"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/ATG/ATG2007.1/DCS/lib/resources.jar"/>
+	<classpathentry kind="lib" path="C:/ATG/ATG2007.1/DCS/lib/classes.jar"/>
+	<classpathentry kind="lib" path="C:/ATG/ATG2007.1/DSS/lib/resources.jar"/>
+	<classpathentry kind="lib" path="C:/ATG/ATG2007.1/DSS/lib/classes.jar"/>
+	<classpathentry kind="lib" path="C:/ATG/ATG2007.1/DPS/lib/resources.jar"/>
+	<classpathentry kind="lib" path="C:/ATG/ATG2007.1/DPS/lib/classes.jar"/>
+	<classpathentry kind="lib" path="C:/ATG/ATG2007.1/DAS/lib/resources.jar"/>
+	<classpathentry kind="lib" path="C:/ATG/ATG2007.1/DAS/lib/classes.jar"/>
+	<classpathentry kind="lib" path="C:/ATG/ATG2007.1/DAS/lib/servlet.jar"/>
+	<classpathentry kind="lib" path="C:/ATG/ATG2007.1/DAS/lib/ice.jar"/>
+	<classpathentry kind="lib" path="C:/ATG/ATG2007.1/DAS/solid/SolidDriver2.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/B2CCommerce"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Loyalty"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
