Implement LoyaltyPoints payment group authorization

--- a/Loyalty/config/atg/commerce/order/OrderTools.properties
+++ b/Loyalty/config/atg/commerce/order/OrderTools.properties
@@ -1,4 +1,4 @@
 beanNameToItemDescriptorMap+=\
-					loyalty.commerce.order.LoyaltyPoints=loyaltyPoints
+					atg.commerce.order.LoyaltyPoints=loyaltyPoints
 paymentTypeClassMap+=\
-					loyaltyPoints=loyalty.commerce.order.LoyaltyPoints
+					loyaltyPoints=atg.commerce.order.LoyaltyPoints
